--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,39 @@
-version: '3'
+version: '3.7'
+
 services:
-  postgres:
-    image: 'postgres:9.6.1'
+  api:
+    container_name: grupo13_api
+    build:
+      context: .
+      target: development
+    volumes:
+      - .:/app
+      - /app/node_modules
     ports:
-      - '5432:5432'
+      - ${API_PORT}:${API_PORT}
+    env_file:
+      - .env
+    networks:
+      - docker-network
+    depends_on:
+      - postgres
+    
+  postgres:
+    container_name: grupo13_db
+    image: postgres:13-alpine
+    
+    networks:
+      - docker-network
     environment:
-      POSTGRES_USER: 'test'
-      POSTGRES_PASSWORD: 'test'
-      POSTGRES_DB: 'test'
+      POSTGRES_PASSWORD: ${TYPEORM_PASSWORD}
+      POSTGRES_USER: ${TYPEORM_USERNAME}
+      POSTGRES_DB: ${TYPEORM_DATABASE}
+      PG_DATA: /var/lib/postgresql/data
+    ports:
+      - ${TYPEORM_PORT}:${TYPEORM_PORT}
+    volumes:
+      - api_db_data:/var/lib/postgresql/data
+networks:
+  docker-network:
+volumes:
+  api_db_data:
